# ink

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/scripts/: generate-manifest.mjs
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/fonts/: fonts.css
apps/desktop/src/: App.tsx  global.d.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  keys.pem  keys.pem.pub  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/themes/: dark.css  github-dark.css  github-light.css  light.css  nord.css
apps/desktop/src-tauri/src/: lib.rs  main.rs  setup.rs
apps/desktop/src-tauri/src/app/: mod.rs
apps/desktop/src-tauri/src/app/commands/: i18n.rs  mod.rs  recent.rs  spellcheck.rs  theme.rs  window.rs
apps/desktop/src-tauri/src/app/events/: mod.rs
apps/desktop/src-tauri/src/app/state/: mod.rs
apps/desktop/src-tauri/src/core/: config.rs  error.rs  logging.rs  mod.rs
apps/desktop/src-tauri/src/domain/: mod.rs
apps/desktop/src-tauri/src/domain/files/: mod.rs  operations.rs  search.rs  watcher.rs
apps/desktop/src-tauri/src/domain/i18n/: manager.rs  mod.rs
apps/desktop/src-tauri/src/domain/menu/: builder.rs  mod.rs  utils.rs
apps/desktop/src-tauri/src/domain/recent/: items.rs  manager.rs  mod.rs
apps/desktop/src-tauri/src/domain/spellcheck/: mod.rs
apps/desktop/src-tauri/src/domain/themes/: manager.rs  mod.rs
apps/desktop/src-tauri/src/platform/: mod.rs
apps/desktop/src-tauri/src/platform/linux/: mod.rs
apps/desktop/src-tauri/src/platform/macos/: mod.rs  spellcheck.rs  window.rs
apps/desktop/src-tauri/src/platform/windows/: mod.rs  spellcheck.rs  window.rs
apps/desktop/src-tauri/src/utils/: mod.rs  path.rs  platform.rs
apps/desktop/src/constants/: shortcuts.ts
apps/desktop/src/editor/: editor-container.ts  effects.ts  i18n.ts  register-services.ts  source-editor.ts
apps/desktop/src/hooks/: index.ts  useAppCommands.ts  useAutoSave.ts  useDocStats.ts  useFileTreeSelectionSync.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useTheme.ts  useWindowTitle.ts
apps/desktop/src/i18n/: index.ts
apps/desktop/src/services/: export.ts  file.ts  fileSystem.ts  fileWatcher.ts  images.ts  import.ts  index.ts  menu.ts  platform.ts  recentItems.ts  search.ts  spellcheck.ts  toast.ts  transformerUtils.ts  updater.ts  windowMenu.ts
apps/desktop/src/stores/: editor.ts  editorHost.ts  editorMode.ts  fileTree.ts  findReplace.ts  language.ts  platform.ts  preferences.ts  search.ts  sidebar.ts  tabs.ts  theme.ts  (+1 more)
scripts/: bump-packages.mjs  bump-version.mjs
(+80 files in other folders)
